--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Azat Khadiev"
   pronouns         : # example: "she/her"  
-  bio              : "Beamline Scientist at P23 In situ X-ray diffraction and imaging beamline"
+  bio              : "Beamline Scientist at P23 In situ X-ray diffraction and imaging beamline, DESY"
   location         : "Notkestr. 85, Hamburg, Germany"
   employer         : "Deutsches Elektronen-Synchrotron DESY"
   uri              : # URL
