--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   location         : "Notkestr. 85, Hamburg, Germany"
   employer         : "Deutsches Elektronen-Synchrotron DESY"
   uri              : # URL
-  email            : "azat.khadiev@gmail.com" 
+  email            : "azat.khadiev@desy.de" 
 
   # Academic websites
   academia         : # URL
