--- a/_config.yml
+++ b/_config.yml
@@ -225,7 +225,7 @@ collections:
   portfolio:
     output: true
     permalink: /:collection/:path/
-  talks:
+  conferences:
     output: true
     permalink: /:collection/:path/
 
