--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Azat Khadiev @ DESY"
 title_separator          : "-"
 name                     : &name "Azat Khadiev"
 description              : &description "Beamline Scientist at P23 beamline DESY"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : https://azkhadiev.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
