--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   name             : "Azat Khadiev"
   pronouns         : # example: "she/her"  
   bio              : "Beamline Scientist at P23 In situ X-ray diffraction and imaging beamline, DESY"
