--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,8 +14,8 @@ main:
   - title: "Conferences"
     url: /conferences/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Funding"
+    url: /funding/    
     
   - title: "Portfolio"
     url: /portfolio/
